crates/sdk-tests/tests/template/using_extern_crate_not_allowed.stderr
error: using `extern crate` inside `#[template]` is not supported.
 --> $DIR/using_extern_crate_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
