crates/sdk-tests/tests/template/using_extern_crate_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    extern crate alloc;
}

fn main() {}
